--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,12 @@
 @import "./base.css";
+@import "./lists.css";
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  width: 100%;
+  height: 95vh;
+  margin-top: 2vh;
+  /* margin: 0 auto; */
   padding: 2rem;
   font-weight: normal;
 }
@@ -23,13 +27,35 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
-    place-items: center;
+    /* display: flex;
+    place-items: center; */
+    overflow: hidden;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
   }
 }
+
+.row-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-right: 2%;
+}
+
+#top-row {
+    flex-basis: 500px;
+    flex-shrink: 0;
+}
+
+/* #botton-row {
+    flex-shrink: 10;
+} */
